--- a/latex/Summary.tex
+++ b/latex/Summary.tex
@@ -11,7 +11,7 @@ Experiments on all the methods were conducted. They were fitted to the Spam data
 If there had been more time many additional aspects would have been interesting to explore. Some examples include:
 \begin{itemize}
   \item Only real features were discussed, but in real life applications categorical features are equally important. 
-  \item The methods exposure to noisy settings were not discussed. The experiments could be repeated with additional noisy covariates. 
+  \item The methods' exposure to noisy settings were not discussed. The experiments could be repeated with additional noisy covariates. 
   \item Only CART splitting was investigated. Splitting on linear combinations of the features could have a positive impact on performance. 
   \item Like Stochastic Gradient Boosting, Adaboost can also be randomized. 
   \item How the algorithm scales with the size of the dataset would be interesting to investigate, both in terms of computations and accuracy.
